--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ HTML
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Model Size Estimator</title>
+  <title>3D Model Size Estimator2</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="heading">3D Model Size Estimator</h1>
+    <h1 class="heading">3D Model Size Estimator2</h1>
 
     <form id="upload-form" action="/" method="post" enctype="multipart/form-data">
       <label for="stl-file" class="label">Upload STL File:</label>
