--- a/index.html
+++ b/index.html
@@ -3,26 +3,23 @@ HTML
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Model Size Estimator2</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3D Model Size Estimator3</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1 class="heading">3D Model Size Estimator2</h1>
+    <h1>3D Model Size Estimator</h1>
 
-    <form id="upload-form" action="/" method="post" enctype="multipart/form-data">
-      <label for="stl-file" class="label">Upload STL File:</label>
-      <input type="file" id="stl-file" name="stl_file">
-
-      <button type="submit" class="button">Submit</button>
+    <form id="upload-form">
+        <label for="stl-file">Upload STL File:</label>
+        <input type="file" id="stl-file" name="stl_file">
+        <button id="submit-button">Submit</button>
     </form>
 
-    <div id="result" class="result-container"></div>
-  </div>
+    <div id="result"></div>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
