--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-HTML
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +7,7 @@ HTML
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>3D Model Size Estimator</h1>
+    <h1>3D Model Size Estimator4</h1>
 
     <form id="upload-form">
         <label for="stl-file">Upload STL File:</label>
